<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"/>

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_surname"/>

    <EditText
        android:id="@+id/editTextDOB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_dob"/>

    <EditText
        android:id="@+id/editTextHobby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_hobby"/>

    <EditText
        android:id="@+id/editTextOccupation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_occupation"/>

    <Button
        android:id="@+id/buttonSendSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_sms_button"/>

</LinearLayout>
